--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,7 +5,7 @@
 <div class="row single-post">
     <div class="single-post-card view-update {{ object.pk }}">
         <div class="header">
-            <a href="{% url 'helloworld' object.author.pk %}">
+            <a href="{% url 'user_detail' user.id %}">
                 {% if object.author.profile_pic %}
                     <img class="picture-circle--medium" src="/{{object.author.profile_pic.url}}">
                 {% endif %}
