--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,44 @@
-{% load static %}
-<ul>
-    {% if request.user.is_authenticated %}
-        <li>
-            Hi, {{request.user.username}}
-        </li>
-        <li>
-            <a href="{% url 'logout' %}">Logout</a>
-        </li>
-    {% else %}
-        <li>
-            <a href="{% url 'login' %}">Login</a>
-        </li>
-        <li>
-            <a href="{% url 'signup' %}">Signup</a>
-        </li>
-    {% endif %}
-</ul>
-<div>
-    <a href="{% url 'make_post' %}">Make Post</a>
-</div>
-<div>
-    <!-- show all images in PostsView. PostsViews has self.object_list -->
+{% extends "base.html" %}
+{% load custom_tags %}
+{% block content %}
+
+<div class="cards-listing">
     {% for post in object_list %}
-    <!-- anchor tag   -->
-    <!-- forward to localhost:8080/insta when clicking on the image   -->
-    <!-- url search for the name of one of the urls in urls.py   -->
-        <a href="{% url 'post_detail' post.id %}">
-            <img src="/{{post.image}}">
-        </a>
+        <div class="row">
+            <div class="card view-update {{ post.pk }}">
+                <div class="card__panel-head">
+                    <div class="poster__info">
+                        <a href="{% url 'user_detail' post.author.id %}" class="poster__name">
+                            {% if post.author.profile_pic %}
+                                <img class="poster__profilepic" src="/{{ post.author.profile_pic.url }}">
+                            {% endif %}
+                            {{ post.author.username }}
+                        </a>
+<!--                        <span class="poster__timestamp">-->
+<!--                            {{ post.posted_on|timesince }}-->
+<!--                        </span>-->
+                    </div>
+                </div>
+                <a href="{% url 'post_detail' post.pk %}">
+                    <img class="card__main-image" src="/{{ post.image }}">
+                </a>
+
+                <div class="card__panel-body">
+                    <div class="likes">
+                        {% if post.get_like_count %}
+                            {{ post.get_like_count }} like{% if post.get_like_count > 1 %}s{% endif %}
+                        {% endif %}
+                    </div>
+                    <section class="input-row">
+                        <i class="fa {% has_user_liked_post post user %} submit-like" aria-hidden="true"></i>
+                        <div class="hidden-data {{ post.pk }}" style="display: none;">
+                            <span class="post-pk">{{ post.pk }}</span>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
     {% endfor %}
 </div>
+
+{% endblock content %}
