--- a/templates/post_delete.html
+++ b/templates/post_delete.html
@@ -1,3 +1,5 @@
+{#% extends 'base.html' %#}
+{#% block content %#}
 <h1>Deletes Post</h1>
 
 <form action="", method="post" enctype="multipart/form-data">
@@ -8,3 +10,4 @@
     <p>DO you want to delete "{{post.title}}" ?</p>
     <button type="submit">Delete</button>
 </form>
+{#% endblock content %#}
