--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,8 @@
+{% extends 'base.html' %}
+{% block content %}
 <h1>Sign Up</h1>
 
-<form method="post" enctype="multipart/form-data">
+<form action="" method="post" enctype="multipart/form-data">
     <!-- Template language: Django script -->
     <!-- Security to project the form, use it every time when creating a form   -->
     {% csrf_token %}
@@ -8,3 +10,5 @@
     {{ form.as_p }}
     <button type="submit">Signup</button>
 </form>
+{% endblock content %}
+
